--- a/etc.zabbix/futur-tech-zabbix-raspberry-pi.conf
+++ b/etc.zabbix/futur-tech-zabbix-raspberry-pi.conf
@@ -1,4 +1,4 @@
-UserParameter=rpi.cpuClock,/opt/vc/bin/vcgencmd measure_clock arm|cut -d"=" -f2
-UserParameter=rpi.cpuVoltage,/opt/vc/bin/vcgencmd measure_volts | tr -d "volt=" | tr -d "V"
+UserParameter=rpi.cpuClock,vcgencmd measure_clock arm | cut -d"=" -f2
+UserParameter=rpi.cpuVoltage,vcgencmd measure_volts | tr -d "volt=" | tr -d "V"
 UserParameter=rpi.cpuTemperature,cat /sys/class/thermal/thermal_zone*/temp
-UserParameter=rpi.cpuThrottled,/opt/vc/bin/vcgencmd get_throttled|cut -d'=' -f2
+UserParameter=rpi.cpuThrottled,vcgencmd get_throttled | cut -d'=' -f2
